creating functions to randomly place each ship on the game board while avoiding overlapping or splitting

--- a/style.css
+++ b/style.css
@@ -13,35 +13,30 @@
 .ship-1 {
   width: 50px;
   height: 10px;
-  margin: 3px;
   background-color: black;
 }
 
 .ship-2 {
   width: 40px;
   height: 10px;
-  margin: 3px;
   background-color: blue;
 }
 
 .ship-3 {
   width: 30px;
   height: 10px;
-  margin: 3px;
   background-color: brown;
 }
 
 .ship-4 {
   width: 30px;
   height: 10px;
-  margin: 3px;
   background-color: purple;
 }
 
 .ship-5 {
   width: 20px;
   height: 10px;
-  margin: 3px;
   background-color: yellowgreen;
 }
 
@@ -70,9 +65,8 @@
 .block {
   width: 20px;
   height: 20px;
-  border: dashed 0.1px grey;
-  box-sizing: border-box;
-  cursor: pointer;
+  /* border: dashed 0.1px grey;
+  box-sizing: border-box; */
 }
 
 button {
